--- a/en-vivo/tyc-sports/index.html
+++ b/en-vivo/tyc-sports/index.html
@@ -3,18 +3,20 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver canal TyC Sports en vivo y en directo online. Futbol Libre TV Television gratis por internet">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/tyc-sports/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/tyc-sports/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver canal TyC Sports en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="Ver canal TyC Sports en vivo, Futbol televisión Libre online en directo. Copa Argentina y seleccion Argentina" />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/tyc-sports/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/tyc-sports/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/logo-canal/TYC_Sports.webp" />
+	<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/TYC_Sports.webp" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../../favicon/apple-icon-72x72.png">
@@ -40,15 +42,42 @@
 <style type="text/css"> iframe{width: 90%; height: 600px;}@media only screen and (max-width: 600px){iframe{width: 100%; height: 360px;}}</style>
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>  
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -66,7 +95,7 @@ Fútbol Libre TV
 <p><strong>Opciones:</strong></p>
 <a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1240" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1240'">Opción 1</a>
 <a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=VHlDU3BvcnQ" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=VHlDU3BvcnQ'">Opción 2</a>
-<a class="btn btn-fl" target="iframe" href="https://embed.librefutboltv.com/tyc.html" onclick="document.getElementById('iframe').src='https://embed.librefutboltv.com/tyc.html'">Opción 3</a>
+<a class="btn btn-fl" target="iframe" href="https://embed.https://futbollibretv.net/tyc.html" onclick="document.getElementById('iframe').src='https://embed.https://futbollibretv.net/tyc.html'">Opción 3</a>
 </ul>
 <button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
 </div>
@@ -94,7 +123,7 @@ Fútbol Libre TV
 <div id="item1"><h2>¿Qué es el canal de TyC Sports en vivo?</h2>
 <p align="left"><strong>TyC Sports</strong> es un canal/señal deportiva de la televisión Argentina con el formato de ser un servicio a través de un abono o suscripción. Este brinda una señal especializada en vivo y en directo de diversos sucesos deportivos a nivel tanto adentro de la República Argentina como en el plano internacional. TyC significa por sus siglas “Torneos y Competencias”. En los primeros años era el único canal argentino que se dedicaba exclusivamente las 24 horas del día a transmitir eventos deportivos; a su vez ocupaba el podio entre los cinco canales con más ranking de la televisión argentina. </p> </div>
 <div id="item2"><h2>¿Cómo puedo ver el canal TyC Sports online en vivo y en directo?</h2>
-<p align="left">Para ver el canal TyC Sports gratis en vivo y en directo debes ingresar <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> y hacer click en el logo de <strong>TyC Sports</strong> o en <strong>Ver Canal</strong> que se encuentra debajo del logo. Luego hacer click en el reproductor que se encuentra abajo de "Ver TyC Sports online en VIVO y en directo". Tambien se puede ingresar en el sitio oficial TyCSportsPlay.com la computadora o del celular si es Android o Iphone iOS. También se puede ver en vivo desde la TV con el <strong>Chromecast</strong>. </div>
+<p align="left">Para ver el canal TyC Sports gratis en vivo y en directo debes ingresar <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> y hacer click en el logo de <strong>TyC Sports</strong> o en <strong>Ver Canal</strong> que se encuentra debajo del logo. Luego hacer click en el reproductor que se encuentra abajo de "Ver TyC Sports online en VIVO y en directo". Tambien se puede ingresar en el sitio oficial TyCSportsPlay.com la computadora o del celular si es Android o Iphone iOS. También se puede ver en vivo desde la TV con el <strong>Chromecast</strong>. </div>
 
 </p>
 <div id="item3"><h2>Programación de TyC Sports en vivo y en directo las 24 horas</h2>
@@ -119,7 +148,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
