--- a/en-vivo/tyc-sports/ar/index.html
+++ b/en-vivo/tyc-sports/ar/index.html
@@ -95,28 +95,22 @@ $("#navbar").load("../../html/navbar.html");
     });
 </script> 
 <div class="container">
-<div class="card-deck mb-3 text-center">
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h1 class="my-0 font-weight-normal">Canal TyC Sports Online en VIVO y en directo</h1>
-<h2 class="my-0 font-weight-normal">Futbol Libre TV - TyC Sports</h2>
-</div>
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
+<div class="jumbotron">
+<div class="row">
+<div class="col">
+<div class="card  box-shadow ">
 <div class="embed-responsive embed-responsive-16by9">
-<iframe allow="encrypted-media" src="https://bestformula.one/dtvpl2.html?id=1240" width="100%" height="100%" name="iframe" id="iframe" frameborder="0" scrolling="no" style="position:absolute;" allowfullscreen></iframe>
+<script type="text/javascript">
+                    if (embed) {document.write('<iframe class="embed-responsive-item" frameborder="0" allow="autoplay; encrypted-media"sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts" allowfullscreen src="'+atob(embed)+'" scrolling="no" frameBorder="0" allowfullscreen></iframe>');}
+                        </script>
+</div>
+</div>
+</div>
 </div>
 
-<div align="left">
-<p><strong>Opciones:</strong></p>
-<a class="btn btn-fl" target="iframe" href="//bestformula.one/dtvpl2.html?id=1240" onclick="document.getElementById('iframe').src='//bestformula.one/dtvpl2.html?id=1240'">Opción 1</a>
-<a class="btn btn-fl" target="iframe" href="//embed49.thaidomains.co.in/cvatt.html?get=VHlDU3BvcnQ" onclick="document.getElementById('iframe').src='//embed49.thaidomains.co.in/cvatt.html?get=VHlDU3BvcnQ'">Opción 2</a>
-<a class="btn btn-fl" target="iframe" href="https://embed.https://futbollibretv.net/tyc.html" onclick="document.getElementById('iframe').src='https://embed.https://futbollibretv.net/tyc.html'">Opción 3</a>
-</ul>
-<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload();">Recargar página</button>
+
 </div>
-</div>
-</div>
+<button type="button" class="btn btn-lg btn-block btn-fl" onclick="location.reload()" />Recargar reproductor</button>
 	
 <ul>
 	<li><a href="#item1">¿Qué es el canal de TyC Sports en vivo?</a></li>
