--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://futbollibretv.net/" />
+<link rel="canonical" href="https://futbollibretv.net/es/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 	
 <meta name="description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Ver Fútbol Argentino en VIVO, Copa Libertadores, Sudamericana y cientos de canales deportivos"><meta name="google-site-verification" content="Z-r3ayxcf3Fs9_Qw4uJUskglMR8sk_T3fGaAd2M62VY" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
-	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+	
 <meta property="og:title" content="Fútbol Libre TV - Todos los canales de deportes"/><meta property="og:description" content="Todo el fútbol Argentino e Internacional solo por Fútbol Libre. Superliga, Copa Libertadores y Sudamericana y cientos de canales deportivos."/>
-<meta property="og:url" content="https://futbollibretv.net/" />
+<meta property="og:url" content="https://futbollibretv.net/es/" />
 <meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
 <meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
@@ -56,59 +56,46 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/es","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
-<nav>
-        <div class="nav-bar">
-            <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
-            <div class="menu">
-                <div class="logo-toggle">
-                    <span class="logo"><a href="#"><img src="https://futbollibretv.net/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
-                    <i class='bx bx-x siderbarClose'></i>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
-                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
-   
-                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
-                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>   
-			 <li><a href="https://forms.gle/Jj4EgVuQ6YUTMzuW9">DOMINIO EN VENTA</a></li>   
-                </ul>
-            </div>
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                    <i class='bx bx-moon moon'></i>
-                    <i class='bx bx-sun sun'></i>
-                </div>
-                <div class="searchBox">
-                   <div class="searchToggle">
-                    <i class='bx bx-x cancel'></i>
-                    <i class='bx bx-search search'></i>
-                   </div>
-                    <div class="search-field">
-                        <input type="text" placeholder="Search...">
-                        <i class='bx bx-search'></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="/">
+Fútbol Libre TV
+</a>
+
+<a class="btn btn-outline-fl" rel="home" href="/">
+<img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
+</a>
+</div>
 
 
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
 <p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
-<h2 class="lead">Ver <strong>Fútbol Libre</strong> para todos.</h2>
+<h2 class="lead">Ver <strong>Libre Fútbol </strong> para todos.</h2>
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="600"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="420"></iframe>
 </div>
-<br>
+<br />
+	<p class="display-5 text-center">Liga Profesional de Fútbol . Calendarios, próximos partidos, tabla de posiciones</p>
+
+	
+<div id="protag-in_article_video"></div>
+<script type="text/javascript">
+    window.googletag = window.googletag || { cmd: [] };
+    window.protag = window.protag || { cmd: [] };
+    window.protag.cmd.push(function () {
+        window.protag.display("protag-in_article_video");
+    });
+</script>
+			  
+<iframe allowfullscreen='true' frameborder='0'id='calendario' height='720' scrolling='auto' src='https://estdeportes.telam.com.ar/html/v3/index.html?channel=deportes.futbol.copalpf&lang=es_LA' width='100%'></iframe>
+<br />
 <p class="display-5 text-center">Ver Canales de futbol online en vivo y en directo</p>
 <br />
 <div class="card-deck mb-3 text-center">
@@ -119,23 +106,12 @@
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
 <a href="/en-vivo/tyc-sports/"><img src="../img/logo-canal/TYC_Sports.webp?" title="Ver el canal TYC Sports en HD online en VIVO y en directo" alt="Logo de TYC Sports" width="204"></a>
-<li><strong>TYC Sports</strong>, canal argentino líder del deporte.</li>
+<li> Ver <strong>TYC Sports</strong> en vivo, canal argentino líder del deporte.<br /></li>
 </ul>
 <a href="/en-vivo/tyc-sports/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver Canal</button></a>
 </div>
 </div>
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-3 font-weight-normal">TNT Sports</h2>
-</div>
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
-<a href="/en-vivo/tnt-sports-online/"><img src="../img/logo-canal/TNT_Sports.webp" title="Ver TNT Sports Premium Online en VIVO y en directo" alt="Logo de TNT Sports Premium" width="204"></a>
-<li><strong>TNT Sports</strong>, canal que transmite la <strong>Liga Profesional de Fútbol</strong></li>
-</ul>
-<a href="/en-vivo/tnt-sports-online/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
+
 <div class="card mb-4 box-shadow">
 <div class="card-header">
 <h2 class="my-3 font-weight-normal">ESPN Premium</h2>
@@ -156,7 +132,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-1/"><img src="../img/logo-canal/ESPN.webp" title="Ver ESPN 1 en VIVO y en directo" alt="Logo de ESPN 1" width="204"></a>
 	<ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 1</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 1</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -168,7 +144,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-2/"><img src="../img/logo-canal/ESPN_2.webp" title="Ver ESPN 2 en VIVO y en directo" alt="Logo de ESPN 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 2</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 2</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -180,7 +156,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox-Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 1</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 1</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-1/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -192,7 +168,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 2</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 2</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -204,7 +180,7 @@
 <div class="card-body">
 <a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li>Toda la programación en HD del canal <strong>Fox Sports 3</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>Fox Sports 3</strong><br /></li>
 </ul>
 <a href="/en-vivo/fox-sports-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -218,7 +194,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-3/"><img src="../img/logo-canal/ESPN_3.webp" title="Ver ESPN 3 en VIVO" alt="Logo de ESPN 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN 3</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN 3</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-3/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -230,7 +206,7 @@
 <div class="card-body">
 <a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
-<li>Toda la programación en HD del canal <strong>ESPN Extra</strong></li>
+<li>Sigue toda la programación en HD del canal <strong>ESPN Extra</strong> en vivo online<br /></li>
 </ul>
 <a href="/en-vivo/espn-extra/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -257,7 +233,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.webp" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino</li>
+<li>Ver <strong>Televisión Pública Argentina</strong>, canal de televisión abierta argentino<br /></li>
 </ul>
 <a href="/en-vivo/tv-publica/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -270,7 +246,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/deportv/"><img src="../img/logo-canal/DeporTV.png" title="Ver DeporTV en VIVO" alt="Logo de DeporTV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>DeporTV</strong>, canal público de deportes de Argentina.</li>
+<li><strong>Ver DeporTV</strong> en vivo, canal público de deportes de Argentina.<br /></li>
 </ul>
 <a href="/en-vivo/deportv/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -287,7 +263,7 @@
 <div class="card-body">
 <br><a href="/en-vivo/vtv-plus-uruguay/"><img src="../img/logo-canal/VTV_Plus_up.png" title="Ver VTV Plus en Vivo y en Directo" alt="Logo de VTV Plus TV" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
-<li><strong>VTV</strong>, canal deportivo Uruguayo</li>
+<li>Ver <strong>VTV</strong> en vivo, canal deportivo Uruguayo<br /></li>
 </ul>
 <a href="/en-vivo/vtv-plus-uruguay/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
 </div>
@@ -332,7 +308,9 @@
 <p>Futbol Libre TV se especializa en la transmisión de partidos en vivo y en directo. Sin embargo, algunos canales pueden ofrecer repeticiones de los encuentros después de su finalización. Te recomendamos consultar la programación de los canales para verificar si alguna repetición está disponible.</p>
 
 <p>Futbol Libre TV es una excelente opción para todos los amantes del fútbol  que desean ver los partidos en vivo y en directo sin perderse ningún detalle. Con una amplia selección de canales gratuitos, podrás disfrutar de los encuentros más emocionantes del fútbol argentino, la Copa Libertadores, la Copa Sudamericana y la Champions League. Ya sea desde tu computadora o desde tu celular, Futbol Libre TV te brinda la posibilidad de seguir de cerca a tus equipos favoritos y vivir la pasión del fútbol desde la comodidad de tu hogar. No te pierdas ningún partido importante y únete a la comunidad de aficionados que disfrutan de Futbol Libre TV. ¡Ingresa a <a href="https://futbollibretv.net/">futbollibretv.net</a> y comienza a vivir la emoción del fútbol en vivo y en directo!</p>
-	
+	<br />
+<p align="left"><strong><i style="color:red">Disclaimer:</i></strong> futbollibretv.net es solo un sitio web de incrustación de videos y no aloja ni transmite ningún  tipo de video. Todos los videos aquí son de sitios web de terceros. Comuníquese con el sitio web de alojamiento de videos apropiado para eliminar cualquier video.
+    </p>
 <!--p align="left"><h2>Preguntas frecuentes</h2></p><br />
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
@@ -347,45 +325,7 @@
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
 <p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br /></div-->
-<script>
-		const body = document.querySelector("body"),
-			  nav = document.querySelector("nav"),
-			  modeToggle = document.querySelector(".dark-light"),
-			  searchToggle = document.querySelector(".searchToggle"),
-			  sidebarOpen = document.querySelector(".sidebarOpen"),
-			  siderbarClose = document.querySelector(".siderbarClose");
-			  let getMode = localStorage.getItem("mode");
-				  if(getMode && getMode === "dark-mode"){
-					body.classList.add("dark");
-				  }
-		// js code to toggle dark and light mode
-			  modeToggle.addEventListener("click" , () =>{
-				modeToggle.classList.toggle("active");
-				body.classList.toggle("darkk");
-				// js code to keep user selected mode even page refresh or file reopen
-				if(!body.classList.contains("darkk")){
-					localStorage.setItem("mode" , "lightt-mode");
-				}else{
-					localStorage.setItem("mode" , "darkk-mode");
-				}
-			  });
-		// js code to toggle search box
-				searchToggle.addEventListener("clickk" , () =>{
-				searchToggle.classList.toggle("activee");
-			  });
-		 
-			  
-		//   js code to toggle sidebar
-		sidebarOpen.addEventListener("click" , () =>{
-			nav.classList.add("active");
-		});
-		body.addEventListener("click" , e =>{
-			let clickedElm = e.target;
-			if(!clickedElm.classList.contains("sidebarOpen") && !clickedElm.classList.contains("menu")){
-				nav.classList.remove("active");
-			}
-		});
-		</script>
+
 
 <br />
 <div class="sharethis-inline-share-buttons"></div>
@@ -404,15 +344,12 @@
 <li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
-<small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
+<small class="d-block mb-3 text-muted">Fútbol Libre TV 2024 &copy; Todos los derechos reservados.</small>
 </ul>
 </div>
 </div>
 </footer>
 	
-<script>
-document.addEventListener("DOMContentLoaded",function(){var e;if("IntersectionObserver"in window){e=document.querySelectorAll(".lazy");var n=new IntersectionObserver(function(e,t){e.forEach(function(e){if(e.isIntersecting){var t=e.target;t.src=t.dataset.src,t.classList.remove("lazy"),n.unobserve(t)}})});e.forEach(function(e){n.observe(e)})}else{var t;function r(){t&&clearTimeout(t),t=setTimeout(function(){var n=window.pageYOffset;e.forEach(function(e){e.offsetTop<window.innerHeight+n&&(e.src=e.dataset.src,e.classList.remove("lazy"))}),0==e.length&&(document.removeEventListener("scroll",r),window.removeEventListener("resize",r),window.removeEventListener("orientationChange",r))},20)}e=document.querySelectorAll(".lazy"),document.addEventListener("scroll",r),window.addEventListener("resize",r),window.addEventListener("orientationChange",r)}});
-</script>
-<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5ab9c9531fff98001395a59a&product=inline-share-buttons"></script>
 </body>
 </html>
+  
